<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.technikum_wien.if15b049.androidbac.Views.EditPictureActivity"
    android:orientation="vertical">

    <Button android:id="@+id/get_picture"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="getPicture"
        android:text="@string/get_picture_title" />

    <Button android:id="@+id/edit_picture"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="editPicture"
        android:text="@string/edit_picture_title" />

    <Button android:id="@+id/save_picture"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="savePicture"
        android:text="@string/save_picture_title" />

    <ImageView
        android:id="@+id/picture_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxHeight="22dp"
        android:maxWidth="22dp"
        />



</LinearLayout>
